--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Test Page</title>
+    <title>Rushil Shah</title>
 </head>
 
 <body>
