--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         </h4>
         <h5>
             <!-- target="_blank" augmentation makes the site open in a new tab -->
-            <div style="height: 30px;"></div>
-            Contact Me: <a href="https://www.linkedin.com/in/rushil-shah-5a8056262" target="_blank">LinkedIn</a>, <a href="https://github.com/shah-rushil" target="_blank">Github</a>
+            <div style="height: 10px;"></div>
+            <div class="center-text">
+            <a href="https://www.linkedin.com/in/rushil-shah-5a8056262" target="_blank"><img src="images/linkedin_logo.png" alt="linkedin_logo" class="logo-pic"></a> 
+            <a href="https://github.com/shah-rushil" target="_blank"><img src="images/github_logo.png" alt="github_logo" class="logo-pic"></a>
+            </div>
             <div style="height: 187px;"></div>
         </h5>
     </div>
@@ -99,9 +102,18 @@
         </h2>
         <div style="height: 40px;"></div>
         <h4>
+            5/5/2024
+        </h4>
+        <div style="height: 20px;"></div>
+        <p>
+            Just a quick update regarding some features: dark mode feature has been added and issues regarding 
+            aspect ratios should be fixed.
+        </p>
+        <div style="height: 60px;"></div>
+        <h4>
             5/2/2024
         </h4>
-        <div style="height: 20px;", id="posts"></div>
+        <div style="height: 20px;"></div>
         <p>
             It is closing in on the end of my freshman year of college. It has been quite the experience to say
             the least. The mix between academics, social life, and personal life has been something I have never
