more bug fixes and added project pictures

--- a/index.html
+++ b/index.html
@@ -85,16 +85,31 @@
         </h2>
         <div style="height: 40px;"></div>
         <div class="project">
-            <!--<img src="image.jpg" alt="Description of the image">-->
-            Physics Genie
+            <a href="https://physicsgenie.org/" class="project-img-link" target="_blank">
+                <img src="images/physics_genie_logo.png" alt="Physics Genie" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>Physics Genie</b>
+            </div>
+        </div>
+        <!-- Physics Simulation Project -->
+        <div class="project">
+            <a href="/simulations.html" class="project-img-link">
+                <img src="images/Lorenz_attractor.png" alt="Lorentz Attractor" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>Physics Simulations</b>
+            </div>
         </div>
         <div class="project">
-            Physics Simulations
+            <a href="/todo.html" class="project-img-link">
+                <img src="images/todo_pic.png" alt="To-Do List" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>To-Do List</b>
+            </div>
         </div>
-        <div class="project">
-            Writing to LaTeX converter
-        </div>
-        <div style="height: 120px;"></div>
+        <div style="height: 280px;"></div>
         <!-- Start of the Posts Section -->
         <div style="height: 80px;", id="posts"></div>
         <h2> 
