fixed darkmode bug

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Rushil Shah</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -141,6 +142,5 @@
         </p>
         <div style="height: 80px;"></div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
