--- a/index.html
+++ b/index.html
@@ -118,6 +118,17 @@
         </h2>
         <div style="height: 40px;"></div>
         <h4>
+            6/5/2024
+        </h4>
+        <div style="height: 20px;"></div>
+        <p>
+            Summer time is finally here! Few notes about the website: to-do list (first draft) has been added, physics simulations
+            will come soon, and there have been some more dark mode bug fixes. I am hoping to add some of my handouts
+            later as well as make the items in the to-do list movable and saveable after existing the site. After that,
+            I will probably start adding the physics simulations. To anyone reading, have a great summer!
+        </p>
+        <div style="height: 60px;"></div>
+        <h4>
             5/5/2024
         </h4>
         <div style="height: 20px;"></div>
