to-do list bug fix

--- a/todo.html
+++ b/todo.html
@@ -45,8 +45,10 @@
     </div>
     <div class="right-half">
         <div style="height: 80px;"></div>
-        <a href="/index.html#proj">Back to Projects!</a>
-        <div style="height: 40px;"></div>
+        <a href="/index.html#proj"> &lt;-- Back to Projects!</a>
+        <div style="height: 20px;"></div>
+        <button class="reset-button" id="reset"> Reset All </button>
+        <div style="height: 20px;"></div>
         <div class="task" id="not-started-task"> <!-- Not Started Tasks -->
             <div class="not-started-title">
                 Not Started
