Handouts Section updated

--- a/index.html
+++ b/index.html
@@ -75,8 +75,141 @@
         <p>
             Over the past few years, I have written a variety of STEM handouts including school curriculum and olympiad
             preparation. I have decided to release some of the handouts that I have written and will release more
-            as I polish them. 
+            as I polish them. <strong>** Bolded handouts have been released **</strong> 
         </p>
+        <div style="height: 30px;"></div>
+        <div class="handout-container">
+            <div class="handout-topic" id="AP Statistics">
+                <h4 style="text-decoration: underline;">
+                    AP Statistics
+                </h4>
+                <div style="height:20px;"></div>
+                <ul>
+                    <li><a href="https://drive.google.com/file/d/189bw8TpMUtmW6oj7DMmE7SQZRffn_oEV/view?usp=sharing" target="_blank">
+                        One-Variable Data
+                    </a></li>
+                    <div style="height:3px;"></div>
+                    <li><a href="https://drive.google.com/file/d/153gcRO0NBdJPBB5JJPmHn_w4mZjpjrVV/view?usp=sharing" target="_blank">
+                        Normal Model and Two-Variable Data
+                    </a></li>
+                    <div style="height:3px;"></div>
+                    <li><a href="https://drive.google.com/file/d/1V3CTz-jEpO1I1981hdxgbqJLmpHusYOT/view?usp=sharing" target="_blank">
+                        Transformations and Experiments
+                    </a></li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Probability and Random Variables
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Sampling Distributions and Confidence Intervals
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Hypothesis Tests
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        T tests and T intervals
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Chi-Squared Tests
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Linear Regression and AP Practice
+                    </li>
+                    <div style="height:3px;"></div>
+                </ul>
+            </div>
+            <div class="handout-topic" id="AP Physics 1">
+                <h4 style="text-decoration: underline;">
+                    AP Physics 1
+                </h4>
+                <div style="height:20px;"></div>
+                <ul>
+                    <li>
+                        1-D Kinematics
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Projectile Motion
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Forces and Newton's Laws
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Centripetal Motion
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Work, Energy, and Power
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Momentum and Collisions
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Rotational Motion
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Angular Momentum
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Simple Harmonic Motion
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        AP Review
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="handout-container">
+            <div class="handout-topic" id="AP Statistics">
+                <h4 style="text-decoration: underline;">
+                    F=ma Competition
+                </h4>
+                <div style="height:20px;"></div>
+                <ul>
+                    <li>
+                        Kinematics
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Complex Forces
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Advanced Energy Problems
+                    </li>
+                    <div style="height:3px;"></div>
+                </ul>
+            </div>
+            <div class="handout-topic" id="AP Physics 1">
+                <h4 style="text-decoration: underline;">
+                    AP Computer Science A
+                </h4>
+                <div style="height:20px;"></div>
+                <ul>
+                    <li>
+                        Sorting Algorithms
+                    </li>
+                    <div style="height:3px;"></div>
+                    <li>
+                        Nested Loops
+                    </li>
+                    <div style="height:3px;"></div>
+                </ul>
+            </div>
+        </div>
+        
         <div style="height: 120px;"></div>
 
         <!-- Start of the Projects Section -->
@@ -116,7 +249,7 @@
         <h2> 
             Posts
         </h2>
-        <div style="height: 40px;"></div>
+        <div style="height: 60px;"></div>
         <h4>
             6/5/2024
         </h4>
