--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
         <h4>
             <div style="height: 30px;"></div>
-            <a href="#intro">Introduction</a> <br>
-            <div style="height: 5px;"></div>
-            <a href="#handouts">Handouts</a> <br>
+            <a href="#intro">About Me</a> <br>
             <div style="height: 5px;"></div>
             <a href="#proj">Projects</a> <br>
+            <div style="height: 5px;"></div>
+            <a href="#handouts">Handouts</a> <br>
             <div style="height: 5px;"></div>
             <a href="#posts">Posts</a> <br>
         </h4>
@@ -62,9 +62,42 @@
             high school. Around the same time, I was also introduced to coding and was facinated how a few lines of code
             could solve many difficult and time consuming problems. However, it was in college where I first gained exposure
             to the intersection of physics and computer science which made me realize the versatility of computer science.
-            I hope to continue this journey to unlock the full potential of computer science throughout my life.
+            I thrive to continue this journey to unlock the full potential of computer science throughout my life.
         </p>
         <div style="height: 120px;"></div> 
+
+        <!-- Start of the Projects Section -->
+        <div style="height: 80px;", id="proj"></div>
+        <h2> 
+            Projects
+        </h2>
+        <div style="height: 40px;"></div>
+        <div class="project">
+            <a href="https://physicsgenie.org/" class="project-img-link" target="_blank">
+                <img src="images/physics_genie_logo.png" alt="Physics Genie" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>Physics Genie</b>
+            </div>
+        </div>
+        <!-- Physics Simulation Project -->
+        <div class="project">
+            <a href="/simulations.html" class="project-img-link">
+                <img src="images/Lorenz_attractor.png" alt="Lorentz Attractor" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>Physics Simulations</b>
+            </div>
+        </div>
+        <div class="project">
+            <a href="/todo.html" class="project-img-link">
+                <img src="images/todo_pic.png" alt="To-Do List" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>To-Do List</b>
+            </div>
+        </div>
+        <div style="height: 380px;"></div>
 
         <!-- Start of the Handouts Section -->
         <div style="height: 80px;", id="handouts"></div>
@@ -97,12 +130,13 @@
                         Transformations and Experiments
                     </a></li>
                     <div style="height:3px;"></div>
-                    <li>
+                    <li><a href="https://drive.google.com/file/d/1yIJ0B9OVDqDu-NJAuXc7akE_-cLnm-XK/view?usp=sharing" target="_blank">
                         Probability and Random Variables
-                    </li>
+                    </a></li>
                     <div style="height:3px;"></div>
-                    <li>
+                    <li><a href="https://drive.google.com/file/d/1Ea6HGCGZlVC6a1XOA7FAtbIkgAB1ySZi/view?usp=sharing" target="_blank">
                         Sampling Distributions and Confidence Intervals
+                    </a>
                     </li>
                     <div style="height:3px;"></div>
                     <li>
@@ -129,8 +163,9 @@
                 </h4>
                 <div style="height:20px;"></div>
                 <ul>
-                    <li>
+                    <li><a href="https://drive.google.com/file/d/1cQmyRSdKyL3oMtxAA-Ig1FigsuW5WPln/view?usp=sharing" target="_blank">
                         1-D Kinematics
+                    </a>
                     </li>
                     <div style="height:3px;"></div>
                     <li>
@@ -211,39 +246,6 @@
         </div>
         
         <div style="height: 120px;"></div>
-
-        <!-- Start of the Projects Section -->
-        <div style="height: 80px;", id="proj"></div>
-        <h2> 
-            Projects
-        </h2>
-        <div style="height: 40px;"></div>
-        <div class="project">
-            <a href="https://physicsgenie.org/" class="project-img-link" target="_blank">
-                <img src="images/physics_genie_logo.png" alt="Physics Genie" class="project-img">
-            </a>
-            <div class="project-text">
-                <b>Physics Genie</b>
-            </div>
-        </div>
-        <!-- Physics Simulation Project -->
-        <div class="project">
-            <a href="/simulations.html" class="project-img-link">
-                <img src="images/Lorenz_attractor.png" alt="Lorentz Attractor" class="project-img">
-            </a>
-            <div class="project-text">
-                <b>Physics Simulations</b>
-            </div>
-        </div>
-        <div class="project">
-            <a href="/todo.html" class="project-img-link">
-                <img src="images/todo_pic.png" alt="To-Do List" class="project-img">
-            </a>
-            <div class="project-text">
-                <b>To-Do List</b>
-            </div>
-        </div>
-        <div style="height: 280px;"></div>
         <!-- Start of the Posts Section -->
         <div style="height: 80px;", id="posts"></div>
         <h2> 
