--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Rushil Shah</title>
+    <meta name="google-site-verification" content="DMYg2JBR1UMPj2EeptN_aG7nsJ3PipwrBB6Y3jMYGlQ" />
     <script src="script.js" defer></script>
 </head>
 
