--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         </div>
         <!-- Physics Simulation Project -->
         <div class="project">
-            <a href="/simulations.html" class="project-img-link">
-                <img src="images/Lorenz_attractor.png" alt="Lorentz Attractor" class="project-img">
+            <a href="https://olytextbooks.com/" class="project-img-link">
+                <img src="images/olytextbooks.png" alt="TOTO" class="project-img">
             </a>
             <div class="project-text">
-                <b>Physics Simulations</b>
+                <b>Olympiad Textbook Compiler</b>
             </div>
         </div>
         <div class="project">
