--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
         <h2> 
             Projects
         </h2>
-        <div style="height: 40px;"></div>
+        <div style="height: 60px;"></div>
+        <div class="project">
+            <a href="https://github.com/JuliaLabs/SmartSolve" class="project-img-link" target="_blank">
+                <img src="images/matrix.png" alt="SmartSolve" class="project-img">
+            </a>
+            <div class="project-text">
+                <b>SmartSolve</b>
+            </div>
+        </div>
         <div class="project">
             <a href="https://physicsgenie.org/" class="project-img-link" target="_blank">
                 <img src="images/physics_genie_logo.png" alt="Physics Genie" class="project-img">
@@ -90,6 +98,7 @@
                 <b>Olympiad Textbook Compiler</b>
             </div>
         </div>
+        <div style="height: 300px;"></div>
         <div class="project">
             <a href="/todo.html" class="project-img-link">
                 <img src="images/todo_pic.png" alt="To-Do List" class="project-img">
@@ -99,7 +108,6 @@
             </div>
         </div>
         <div style="height: 380px;"></div>
-
         <!-- Start of the Handouts Section -->
         <div style="height: 80px;", id="handouts"></div>
         <h2> 
